--- a/assignment1/page2.html
+++ b/assignment1/page2.html
@@ -16,10 +16,8 @@
         </header>
 
         <div id="post"></div>
-        
-        <div id="loader">Loading...</div>
 
-        <script src="./scripts.js"></script>
+        <script src="./postScript.js"></script>
 
         <footer>
             <h4>Copyright &copy;</h4>
