--- a/assignment1/page3.html
+++ b/assignment1/page3.html
@@ -16,6 +16,9 @@
             <a class="white" href="./page3.html">page 3</a>
         </header>
 
+        <div id="weathercontainer"></div>
+
+        <script src="./weatherScript.js"></script>
 
         <footer>
             <h4>Copyright &copy;</h4>
